# ballz

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile.bat  def.h  main.c  makefile
.github/workflows/: ci.yml
art/: cursor_shield_anim.psd
game/: balls.c  balls.h  draw.c  draw.h  event.c  event.h  load.c  load.h
